--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,5 +7,12 @@
 .scrapping {
   padding-top: 20px;
   width: 100%;
+  height: 100vh;
+}
+
+.nlp {
+  padding-top: 20px;
+  width: 100%;
+  height: 100vh;
 }
 
