--- a/client/src/components/scrapping/scrapping.css
+++ b/client/src/components/scrapping/scrapping.css
@@ -1,8 +1,9 @@
 h2 {
     text-align: center;
-}
+  }
+  
 
-.container {
+.scrapping-container {
     width: 80%;
     margin: auto;
     border-radius: 3%/5%;
@@ -21,7 +22,7 @@ button {
     margin-left: 5px;
 }
 
-input {
+#input-url {
     height: 20px;
     width: 600px;
 }
@@ -34,3 +35,4 @@ input {
     height: 500px;
     overflow: auto;
 }
+
