--- a/client/src/components/nlp/styles.css
+++ b/client/src/components/nlp/styles.css
@@ -14,7 +14,7 @@
     flex: 1;
 }
 
-.tokenization-container, .stemming-container {
+.tokenization-container, .stemming-container, .lemmatzing-container {
     display: flex;
     justify-content: space-between;
     margin: 10px;
