--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,15 +4,24 @@
   padding: 0;
 }
 
-.scrapping {
-  padding-top: 20px;
+.scrapping{
   width: 100%;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  background-color: rgb(243, 245, 247);
 }
+
+
 
 .nlp {
-  padding-top: 20px;
   width: 100%;
   height: 100vh;
+  display: flex;
+  align-items: center;
+  background-color: rgb(227, 232, 238);
 }
 
+button:hover {
+  background-color: rgb(24, 173, 24);
+}
