--- a/client/src/components/nlp/nlp.css
+++ b/client/src/components/nlp/nlp.css
@@ -2,16 +2,21 @@
 .services-container {
     width: 80%;
     margin: auto;
+    padding: 10px;
     border-radius: 2%/5%;
-    background-color: rgb(222, 226, 230);
+    background-color: rgb(207, 211, 214);
 }
-
-.services {
-    display: flex;
-}
-
 .service-input, .service-options, .service-output {
     flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.options-container{
+    min-width: 350px;
+}
+.services {
+    display: flex;
 }
 
 .tokenization-container, .stemming-container, .lemmatzing-container, .pos-tag-container {
