--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,16 +12,25 @@
   background-color: rgb(243, 245, 247);
 }
 
-
-
 .nlp {
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   display: flex;
   align-items: center;
   background-color: rgb(227, 232, 238);
 }
 
+.sent-fake{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  background-color: rgb(202, 206, 211);
+}
+
 button:hover {
   background-color: rgb(24, 173, 24);
+}
+textarea {
+  resize: none;
 }
