--- a/client/src/components/nlp/nlp.css
+++ b/client/src/components/nlp/nlp.css
@@ -14,6 +14,7 @@
 }
 .options-container{
     min-width: 270px;
+    margin-left: 5px;
 }
 .services {
     display: flex;
@@ -22,7 +23,7 @@
 .tokenization-container, .stemming-container, .lemmatzing-container, .pos-tag-container, .language-opt-container {
     display: flex;
     justify-content: space-between;
-    margin: 10px;
+    padding: 10px;
 }
 
 .stop-wrd-chkbx {
