--- a/src/App.css
+++ b/src/App.css
@@ -4,27 +4,22 @@
   padding: 0;
 }
 
-.scrapping{
+.scrapping, .nlp, .sent-fake{
   width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
+}
+
+.scrapping{
   background-color: rgb(243, 245, 247);
 }
 
 .nlp {
-  width: 100%;
-  height: 110vh;
-  display: flex;
-  align-items: center;
   background-color: rgb(227, 232, 238);
 }
 
 .sent-fake{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
   background-color: rgb(202, 206, 211);
 }
 
@@ -33,4 +28,10 @@ button:hover {
 }
 textarea {
   resize: none;
+}
+@media screen and (max-width: 1100px) {
+  .scrapping, .nlp, .sent-fake {
+    height: auto;
+    padding: 10px 0;
+  }
 }
